Replace calls of `Arrays.asList` when zero and one argument